[package]
name = "rice"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.7.8"
anyhow = "1.0.28"
nix = "0.17.0"
libc = "0.2.69"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
