[package]
name = "rice"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.7.8"
anyhow = "1.0.28"
nix = "0.17.0"
libc = "0.2.69"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
log = "0.4.8"
pretty_env_logger = { version = "0.4.0", optional = true }
syslog = { version = "5.0.0", optional = true }
walkdir = "2.3.1"
controlgroup = "0.3.0"
num_cpus = "1.13.0"

[features]
default = ["stderr"]
stderr = ["pretty_env_logger"]

[package.metadata.feature_groups]
log = ["stderr", "syslog"]

[build-dependencies]
cfg_feature_groups = "0.1.1"
