[package]
name = "rice"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
controlgroup = "0.3.0"
libc = "0.2.69"
log = "0.4.8"
nix = "0.17.0"
num_cpus = "1.13.0"
procfs = "0.7.8"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"
walkdir = "2.3.1"

